objects/Lead_Assessment_Delay__mdt.object
<CustomObject>
    <fields>
        <fullName>Days_Delay__c</fullName>
        <label>Days Delay</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Delay__c</fullName>
        <label>Hours Delay</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes_Delay__c</fullName>
        <label>Minutes Delay</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lead Assessment Delay</label>
    <pluralLabel>Lead Assessment Delays</pluralLabel>
</CustomObject>